--- a/JobroProject/build.gradle
+++ b/JobroProject/build.gradle
@@ -25,9 +25,12 @@ repositories {
 
 
 dependencies {
+	compile("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-web')
-	implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
+	implementation('org.springframework.boot:spring-boot-starter-jdbc')
+	//implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
 	runtimeOnly('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
