--- a/JobroProject/build.gradle
+++ b/JobroProject/build.gradle
@@ -26,12 +26,14 @@ repositories {
 
 dependencies {
 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	compile('org.springframework.boot:spring-boot-starter-data-redis')
+	compile group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
 	implementation('org.springframework.boot:spring-boot-starter-security')
 	implementation('org.springframework.boot:spring-boot-starter-web')
 	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-	implementation('org.springframework.boot:spring-boot-starter-jdbc')
+	//implementation('org.springframework.boot:spring-boot-starter-jdbc')
 	//implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
-	runtimeOnly('mysql:mysql-connector-java')
+	//runtimeOnly('mysql:mysql-connector-java')
 	compileOnly('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
