--- a/JobroProject/bin/main/application.properties
+++ b/JobroProject/bin/main/application.properties
@@ -4,6 +4,7 @@ spring.security.user.password=1234
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.redis.host=127.0.0.1
+spring.redis.host=localhost
 spring.redis.password=kitty123!@
 spring.redis.port=6379
+spring.profiles.active=local
