--- a/JobroProject/build.gradle
+++ b/JobroProject/build.gradle
@@ -19,6 +19,12 @@ group = 'com.example'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 repositories {
 	mavenCentral()
 }
@@ -36,4 +42,5 @@ dependencies {
 	compileOnly('org.projectlombok:lombok')
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 	testImplementation('org.springframework.security:spring-security-test')
+	testCompile group: 'it.ozimov', name: 'embedded-redis', version: '0.7.1'
 }
